files/deployment/default/default-netpol.yml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
  ingress: []
  egress: []

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-traefik
spec:
  podSelector:
    matchLabels:
      tier: frontend
  ingress:
    - from:
        - namespaceSelector: {}
          podSelector:
            matchLabels:
              app: traefik

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-to-kube-dns
spec:
  podSelector: {}
  egress:
    - to:
        - namespaceSelector: {}
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - port: 53
          protocol: UDP

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: egress-to-any
spec:
  podSelector:
    matchLabels:
      egress: any
  egress:
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: egress-to-internet
spec:
  podSelector:
    matchLabels:
      egress: internet
  egress:
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
            except:
              - 192.168.0.0/16
              - 172.16.0.0/12
              - 10.0.0.0/8

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: egress-to-internal
spec:
  podSelector:
    matchLabels:
      egress: internal
  egress:
    - to:
        - ipBlock:
            cidr: 192.168.0.0/16
    - to:
        - ipBlock:
            cidr: 172.16.0.0/12
    - to:
        - ipBlock:
            cidr: 10.0.0.0/8
