files/deployment/default/netpol.yml
# Generate network policy rules on https://editor.networkpolicy.io
---
# Block all incoming traffic
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: deny-by-default
spec:
  podSelector: {}
  ingress: []

---
# Allow all traffic within the same namespace for all Pods
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-same-namespace
spec:
  podSelector: {}
  ingress:
  - from:
    - podSelector: {}

---
# Allow load balancer namespace
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-namespace-traefik
spec:
  podSelector: {}
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: traefik

# ---
# # Allow the ingress Pod “traefic” to communicate to all Pods in this namespace
# apiVersion: networking.k8s.io/v1
# kind: NetworkPolicy
# metadata:
#   name: allow-all-svclbtraefik-ingress
# spec:
#   podSelector: 
#     matchLabels:
#       svccontroller.k3s.cattle.io/svcname: traefik
#   ingress:
#   - {}
#   policyTypes:
#   - Ingress

# ---
# # Allow the ingress Pod “traefic” to communicate to all Pods in this namespace
# apiVersion: networking.k8s.io/v1
# kind: NetworkPolicy
# metadata:
#   name: allow-all-traefik-v121-ingress
# spec:
#   podSelector:
#     matchLabels:
#       app.kubernetes.io/name: traefik
#   ingress:
#   - {}
#   policyTypes:
#   - Ingress
